feat: Add UserAchievements component for tracking user study progress and achievements
- Implemented UserAchievements component to display user achievements based on study statistics and leaderboard rank.
- Created utility functions for formatting study duration and calculating achievement levels.
- Updated Leaderboard index to export UserAchievements component.
- Enhanced StudyStatsDashboard and StudyChart components for better data handling and user feedback.
- Added hooks for leaderboard data management and user rank retrieval.
- Created LeaderboardPage and StudyStatsPage to integrate new components into the application.
- Improved error handling and loading states across various hooks and components.